--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "rollup -c",
     "prepublishOnly": "npm run build"
   },
+  "peerDependencies": {
+    "svelte": "^3.22.0"
+  },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^6.0.0",
     "rollup": "^2.10.0",
