--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "0.0.1",
   "description": "A simple, small, light-weight but powerful data table in svelte.",
-  "name": "svelte-data-table",
+  "name": "svelte-data-tabu",
   "svelte": "src/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
